tasksel (2.03) UNRELEASED; urgency=low

  * Otavio Salvador
    - Add brazilian-portuguese task.
    - Fix how aptitude is called when using manual selection. 
      Closes: #256604
  * Translations
    - André Luís Lopes
      - Updated Brazilian Portuguese translation of tasks.
    - Christian Perrier
      - Updated French translation of tasks.
    - Carlos Z.F. Liu
      - Updated Simplified Chinese translation of tasks.

 -- Christian Perrier <bubulle@debian.org>  Sun, 27 Jun 2004 08:13:20 +0200

tasksel (2.02) unstable; urgency=medium

  * Joey Hess
    - Save some space in desktop task by making it use
      gnome-desktop-environment as the key package for gnome, and only include
      all the rest of gnome if it's available.
    - Fix broken Test-lang for italian, spanish, which justifies the medium
      urgency. Closes: #256346
  * Translations
    - Carlos Z.F. Liu
      - Updated Simplified Chinese programs, tasks and debconf translations
    - Claus Hindsgaul
      - Initial Danish version 2 debconf translation
    - André Luís Lopes
      - Added Brazilian Portuguese translation (debian/po/pt_BR.po).
    (some others not listed)

 -- Joey Hess <joeyh@debian.org>  Sat, 26 Jun 2004 09:34:07 -0400

tasksel (2.01) unstable; urgency=low

  * Joey Hess
    - Add hspell-gui to Hebrew task.
    - Merge office with desktop task, dropping gnucash.
    - First release of rewritten tasksel to unstable.
    - Fix base-config conflicts; 2.32 is the first released version to support
      this tasksel.
  * Translations
    - Eugeniy Meshcheryakov
      - Updated Ukrainian translation
    - Christian Perrier
      - Updated POT files and PO files accordingly
      - Updated French programs and debconf translations
   - Kęstutis Biliūnas
      - Updated Lithuanian programs and debconf translations
    - Claus Hindsgaul
      - Updated Danish translation
    - Håvard Korsvoll
      - Updated Norwegian nynorsk translation of tasks. Closes: #249684
